# Velum

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es.md  README.ja.md  README.md  README.zh-CN.md  RELEASES.md  SECURITY.md  SUPPORT.md  deny.toml  rust-toolchain.toml
.github/: release.yml
.github/workflows/: build-snapshot.yml  ci-health.yml  ci.yml  release.yml
apps/velum-client/: README.md
apps/velum-client/flutter/: README.md  design-qa.md  pubspec.yaml
apps/velum-client/flutter/android/: build.gradle.kts  gradle.properties
apps/velum-client/flutter/lib/: android_vpn.dart  client_compact_navigation.dart  client_configuration.dart  client_controller.dart  client_engine_activation.dart  client_engine_controller.dart  client_enrollment.dart  client_overview.dart  client_profile.dart  client_settings.dart  client_theme.dart  desktop_tun.dart  enrollment_scanner.dart  main.dart  native_client.dart  native_engine.dart  overview_dashboard.dart  overview_dashboard_controls.dart  overview_dashboard_layout.dart  overview_dashboard_network.dart  public_ip_service.dart  routing_rule.dart  routing_rules_panel.dart  settings_section.dart  system_proxy.dart  system_proxy_contract.dart  system_proxy_linux.dart  system_proxy_macos.dart  system_proxy_windows.dart  traffic_chart.dart  traffic_configuration.dart  traffic_mode_controller.dart  traffic_mode_panel.dart  traffic_options_panel.dart  traffic_runtime.dart
apps/velum-client/flutter/linux/: CMakeLists.txt
apps/velum-node/: Cargo.toml
apps/velum-node/examples/: loopback_benchmark.rs
apps/velum-node/src/: acme.rs  admin.rs  cli.rs  config.rs  cover_listener.rs  datagram.rs  deployment.rs  enrollment.rs  lib.rs  listener.rs  main.rs  public_ip.rs  setup.rs  terminal.rs  uninstall.rs
apps/velum_client/: .metadata  README.md  pubspec.yaml
apps/velum_client/lib/: main.dart
apps/velum_client/test/: configuration_test.dart  widget_test.dart
apps/velum_client/web/: index.html  manifest.json
apps/velum_client/windows/: CMakeLists.txt
crates/velum-adapter-connect/: Cargo.toml
crates/velum-adapter-connect/src/: lib.rs
crates/velum-adapter-proxy/: Cargo.toml
crates/velum-adapter-proxy/src/: http.rs  lib.rs  target.rs
crates/velum-adapter-tun/: Cargo.toml
crates/velum-adapter-tun/src/: android.rs  fake_dns.rs  lib.rs
crates/velum-carrier-api/: Cargo.toml
crates/velum-carrier-api/src/: lib.rs
crates/velum-carrier-quic/: Cargo.toml
crates/velum-carrier-quic/src/: lib.rs
crates/velum-carrier-tls/: Cargo.toml
crates/velum-carrier-tls/src/: lib.rs
crates/velum-client-api/: Cargo.toml
crates/velum-client-api/src/: lib.rs
crates/velum-client-engine/: Cargo.toml
crates/velum-client-engine/src/: lib.rs
crates/velum-client-ffi/: Cargo.toml
crates/velum-client-ffi/include/: velum_client.h
crates/velum-client-ffi/src/: abi.rs  configuration.rs  control.rs  engine.rs  enrollment.rs  handles.rs  lib.rs  profile.rs  streams.rs  tun.rs
crates/velum-client-profile/: Cargo.toml
crates/velum-client-profile/src/: enrollment.rs  lib.rs
crates/velum-client-profile/tests/fixtures/: valid-profile.yaml
crates/velum-client-routing/: Cargo.toml
crates/velum-client-routing/src/: lib.rs
crates/velum-client-runtime/: Cargo.toml
crates/velum-client-runtime/src/: lib.rs  state.rs
crates/velum-crypto/: Cargo.toml
crates/velum-crypto/src/: lib.rs
crates/velum-desktop-traffic-host/: Cargo.toml
crates/velum-desktop-traffic-host/src/: lib.rs
crates/velum-forest/: Cargo.toml
crates/velum-forest/src/: lib.rs
crates/velum-helper-protocol/: Cargo.toml
crates/velum-helper-protocol/src/: lib.rs
crates/velum-policy/: Cargo.toml
crates/velum-policy/src/: lib.rs  transition.rs
crates/velum-protocol/: Cargo.toml
crates/velum-protocol/src/: datagram.rs  frame.rs  lib.rs  types.rs
crates/velum-server/: Cargo.toml
crates/velum-server/src/: lib.rs
crates/velum-session/: Cargo.toml
crates/velum-session/src/: campaign.rs  dispatcher.rs  lib.rs  simulator.rs  transition.rs
crates/velum-telemetry/: Cargo.toml
crates/velum-telemetry/src/: lib.rs
docs/: README.md  acme.md  anytls-design-notes.md  architecture-contract.yaml  architecture.md  client-architecture.md  evidence-ledger.md  forest-native.md  helper-protocol-v1.md  landscape.md  protocol-requirements.md  protocol-v0.md  roadmap.md  session-tracer.md  tls-fallback-evolution.md  velum-node.md  vision.md
docs/adr/: 0001-product-position.md  0002-multi-carrier-sessions.md  0003-forest-native.md  0004-quic-carrier.md  0005-stage2-server-admission.md  0006-stage2-connect-adapter.md  0007-stage2-runtime-composition.md  0007-stage3-transition-contract.md  0008-desktop-client-boundary.md  0009-v0-unreliable-datagram-envelope.md  0010-stage2-datagram-authentication.md  0011-cover-service-listener-wiring.md  0011-stage2-local-datagram-adapter.md  0012-flutter-direct-client-api.md  0013-client-runtime-boundary.md  0014-android-tun-data-plane.md  0014-client-trust-modes.md  0015-desktop-system-proxy.md  0016-restorable-platform-traffic-adapters.md  0017-local-traffic-routing-policy.md  0018-desktop-privileged-traffic-host.md  0019-profile-and-routing-evolution.md  0020-offline-client-enrollment.md  0021-native-client-capability-and-ui-evolution.md
experiments/stage0/: README.md  validate.mjs
experiments/stage0/harness/: README.md  package.json  server-lib.mjs  server.mjs  udp.mjs
experiments/stage0/interviews/: README.md
experiments/stage0/manifests/: baselines.json  workloads.json
experiments/stage0/results/: README.md  validate.mjs
scripts/: build-android-client.sh  install-lego.sh  install.sh  test-install.sh
validation/: README.md  validate.mjs
validation/desktop-tun/: README.md
validation/harness/: README.md  common.mjs  harness.test.mjs  package.json  run.mjs  tcp.mjs
validation/manifests/: baselines.json  networks.json
validation/results/: README.md  validate.mjs  validator.mjs  validator.test.mjs
xtask/: Cargo.toml
xtask/src/: architecture.rs  ci_metrics.rs  docs.rs  main.rs  process.rs
(+51 files in other folders)
