[workspace]
members = [
    "xtask",
    "crates/velum-protocol",
    "crates/velum-crypto",
    "crates/velum-carrier-api",
    "crates/velum-telemetry",
    "crates/velum-policy",
    "crates/velum-session",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.97"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
