[workspace]
members = [
    "xtask",
    "crates/velum-protocol",
    "crates/velum-crypto",
    "crates/velum-carrier-api",
    "crates/velum-carrier-quic",
    "crates/velum-carrier-tls",
    "crates/velum-client-api",
    "crates/velum-client-runtime",
    "crates/velum-client-ffi",
    "crates/velum-adapter-tun",
    "crates/velum-adapter-proxy",
    "crates/velum-server",
    "crates/velum-telemetry",
    "crates/velum-policy",
    "crates/velum-forest",
    "crates/velum-session",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.97"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
