[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cargo_metadata = "0.23.1"
globset = "0.4.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
time = { version = "0.3.41", features = ["parsing"] }

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true

