[package]
name = "velum-node"
version = "0.0.1-beta"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
autobins = false

[[bin]]
name = "velum"
path = "src/main.rs"

[dependencies]
quinn = { version = "=0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
getrandom = "=0.3.4"
rustls = { version = "=0.23.41", default-features = false, features = ["ring"] }
serde = { version = "=1.0.228", features = ["derive"] }
tokio = { version = "=1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "=0.8.23"
x509-parser = "=0.18.1"
velum-carrier-quic = { version = "0.0.0", path = "../../crates/velum-carrier-quic" }
velum-forest = { version = "0.0.0", path = "../../crates/velum-forest" }
velum-protocol = { version = "0.0.0", path = "../../crates/velum-protocol" }
velum-server = { version = "0.0.0", path = "../../crates/velum-server" }
velum-telemetry = { version = "0.0.0", path = "../../crates/velum-telemetry" }

[lints]
workspace = true

[dev-dependencies]
rcgen = "=0.14.7"
