[package]
name = "velum-node"
version = "0.0.1-beta-4"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
autobins = false

[[bin]]
name = "velum"
path = "src/main.rs"

[dependencies]
quinn = { version = "=0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
getrandom = "=0.3.4"
qrcode = { version = "=0.14.1", default-features = false }
rustls = { version = "=0.23.41", default-features = false, features = ["ring"] }
rcgen = "=0.14.7"
reqwest = { version = "=0.13.4", default-features = false, features = ["rustls-no-provider"] }
serde = { version = "=1.0.228", features = ["derive"] }
tokio = { version = "=1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "=0.8.23"
x509-parser = "=0.18.1"
velum-carrier-quic = { version = "0.0.0", path = "../../crates/velum-carrier-quic" }
velum-client-profile = { version = "0.0.0", path = "../../crates/velum-client-profile" }
velum-forest = { version = "0.0.0", path = "../../crates/velum-forest" }
velum-protocol = { version = "0.0.0", path = "../../crates/velum-protocol" }
velum-server = { version = "0.0.0", path = "../../crates/velum-server" }
velum-telemetry = { version = "0.0.0", path = "../../crates/velum-telemetry" }

[lints]
workspace = true
