[package]
name = "velum-adapter-tun"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
smoltcp = { version = "=0.12.0", default-features = false, features = ["alloc", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp"] }
velum-client-runtime = { version = "0.0.0", path = "../velum-client-runtime" }

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt"] }

[lints]
workspace = true
