[package]
name = "velum-carrier-quic"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
quinn = { version = "=0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
velum-carrier-api = { version = "0.0.0", path = "../velum-carrier-api" }

[lints]
workspace = true
