[package]
name = "velum-carrier-tls"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rustls = { version = "=0.23.41", default-features = false, features = ["ring"] }
tokio = { version = "=1.52.3", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-rustls = { version = "=0.26.4", default-features = false, features = ["ring"] }
velum-carrier-api = { version = "0.0.0", path = "../velum-carrier-api" }

[dev-dependencies]
rcgen = "=0.14.7"
velum-protocol = { version = "0.0.0", path = "../velum-protocol" }

[lints]
workspace = true
