[package]
name = "velum-client-api"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
quinn = { version = "=0.11.11", default-features = false, features = ["platform-verifier", "runtime-tokio", "rustls-ring"] }
rustls = { version = "=0.23.41", default-features = false, features = ["ring"] }
tokio = { version = "=1.52.3", features = ["io-util", "net", "time"] }
velum-carrier-quic = { version = "0.0.0", path = "../velum-carrier-quic" }
velum-protocol = { version = "0.0.0", path = "../velum-protocol" }

[lints]
workspace = true
