[package]
name = "velum-client-engine"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "=1.52.3", features = ["sync"] }
velum-client-runtime = { version = "0.0.0", path = "../velum-client-runtime" }

[lints]
workspace = true
