[package]
name = "velum-client-ffi"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustls = { version = "=0.23.41", default-features = false, features = ["ring"] }
tokio = { version = "=1.48.0", features = ["rt-multi-thread", "time"] }
velum-client-api = { version = "0.0.0", path = "../velum-client-api" }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
