[package]
name = "velum-client-profile"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10.0"
velum-client-routing = { version = "0.0.0", path = "../velum-client-routing" }

[lints]
workspace = true
