[package]
name = "velum-client-runtime"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt", "sync"] }
velum-client-api = { version = "0.0.0", path = "../velum-client-api" }

[lints]
workspace = true
