[package]
name = "velum-desktop-traffic-host"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
velum-helper-protocol = { version = "0.0.0", path = "../velum-helper-protocol" }

[lints]
workspace = true
