[package]
name = "velum-policy"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
velum-carrier-api = { version = "0.0.0", path = "../velum-carrier-api" }
velum-telemetry = { version = "0.0.0", path = "../velum-telemetry" }

[lints]
workspace = true
